--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -13,7 +13,7 @@ $offwhite: #eee8d6;
 $darkblue: #022933;
 $yellow: #ffba00;
 $blue: #0076a3;
-$green: #548c27;
+$green: #097a58;
 $orange: #964206;
 $pink: #94058d;
 $purple: #6d73c2;
