--- a/sass/modules/_interface.scss
+++ b/sass/modules/_interface.scss
@@ -8,6 +8,7 @@ body {
   font-size: $main-size;
   font-family: $main-font;
   margin: 0 auto;
+  max-width: $breakpoint-screen;
 }
 
 h1 {
@@ -15,14 +16,14 @@ h1 {
   font-weight: $head-font;
   text-align: center;
   margin: 50px 0 50px 0;
-  color: $purple;
+  color: $green;
 }
 
 h2 {
   font-size: $second-heading;
   margin-bottom: 20px;
   font-weight: $head-font;
-  color: $pink;
+  color: $green;
 }
 
 h3 {
@@ -41,24 +42,41 @@ p {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .btnStyle {
   display: flex;
-  flex-direction: column;
+  flex-flow: wrap;
   text-align: center;
+ justify-content: center;
 }
 
+
 .button {
-  margin: 30px;
-  width: 50%;
-  padding: 30px;
-  font-size: $main-heading;
-  font-weight: $head-font;
-  color: $offwhite;
-  background-color: $pink;
-  border-radius: 50%;
+  background-color: #c2fbd7;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: $third-heading;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: 30px 30px 60px 0;
+  width: 200px;
+}
+
+.button:hover {
+  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
 }
 
 @media (min-width: $breakpoint-tablet) {
