--- a/sass/modules/_interface.scss
+++ b/sass/modules/_interface.scss
@@ -70,7 +70,7 @@ p {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  margin: 30px 30px 60px 0;
+  margin: 0 5px 30px 5px;
   width: 200px;
 }
 
